--- a/html/about.html
+++ b/html/about.html
@@ -211,7 +211,8 @@ registrationForm.style.display = "none";
             <h4>Contact Us:</h4>
             <h6>Phone number: +123456</h6>
             <h6>Address: Some Place Avenue</h6>
-            <img><span></span>
+            <p>&copy;Dauren, Rustem, Guldana Ulzhan</p>
+            <span></span>
           </div>
           <div class="col-12 col-lg-8 col-xl-9" id="footer">
             <h4 style="margin: 20px;">Social networks:</h4>
