--- a/index.html
+++ b/index.html
@@ -237,7 +237,8 @@ function closeRegistrationForm() {
             <h4>Contact Us:</h4>
             <h6>Phone number: +123456</h6>
             <h6>Address: Some Place Avenue</h6>
-            <img><span></span>
+            <p>&copy;Dauren, Rustem, Guldana Ulzhan</p>
+            <span></span>
           </div>
           <div class="col-12 col-lg-8 col-xl-9" id="footer">
             <h4 style="margin: 20px;">Social networks:</h4>
